--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  provider: ^6.0.1
+  table_calendar: ^3.0.3
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
