--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   provider: ^6.0.1
   table_calendar: ^3.0.3
   flutter_slidable: ^1.1.0
-
+  firebase_core: ^1.10.2
+  cloud_firestore: ^3.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
